Update apple configs

--- a/osx/config/var_fragments/_globalpreferences.yml
+++ b/osx/config/var_fragments/_globalpreferences.yml
@@ -90,3 +90,6 @@
 
     # Disable volume change feedback
     com.apple.sound.beep.feedback: 0
+
+    # Enable clicking
+    com.apple.mouse.tapBehavior: 1
