--- a/osx/config/var_fragments/com.apple.mail.yml
+++ b/osx/config/var_fragments/com.apple.mail.yml
@@ -1,4 +1,5 @@
   com.apple.mail:
+    # TODO: update
     # Enable send and reply animations in Mail.app
     DisableReplyAnimations: no
     DisableSendAnimations: no
