--- a/cli/version-controll/install.yml
+++ b/cli/version-controll/install.yml
@@ -17,7 +17,7 @@
         - name: tig
           install_options:
 
-        - name: git-extras
+        - name: vcsh
           install_options:
 
     - name: Install mercurial tools
