Add post playlist

--- a/local.yml
+++ b/local.yml
@@ -3,4 +3,5 @@
 - include: pre.yml
 - include: osx/all.yml
 - include: cli/all.yml
-#- include: apps/all.yml
+- include: apps/all.yml
+- include: post.yml
