Add ruby dotfiles

--- a/cli/ruby/install.yml
+++ b/cli/ruby/install.yml
@@ -23,3 +23,8 @@
         - bundler
         - pry
         - rsense
+
+    - name: Install ruby dotfiles
+      vcsh:
+        name: ruby
+        remote: git@github.com:mtneug/dotfiles-ruby.git
