--- a/apps/atom/install.yml
+++ b/apps/atom/install.yml
@@ -12,11 +12,9 @@
       with_items:
         - pen-paper-coffee-syntax
 
-
-        - asciidoc-preview
+        - api-blueprint-preview
         - atom-alignment
         - atom-beautify
-        - atom-color-highlight
         - auto-copyright
         - auto-update-packages
         - autoclose-html
@@ -30,48 +28,40 @@
         - compass
         - coverage
         - cucumber
-        - cucumber-step
         - dash
         - devdocs
         - docblockr
         - editorconfig
         - emmet
-        - error-status
-        - fancy-new-file
         - file-icons
         - filesize
-        - git-tab-status
+        - gitignore-snippets
+        - go-plus
+        - go-rename
         - highlight-line
         - highlight-selected
         - ide-flow
-        - increment-number
         - incremental-search
         - ios
         - javascript-snippets
-        - lorem-ipsum
         - merge-conflicts
         - minimap
-        - minimap-color-highlight
         - minimap-find-and-replace
         - minimap-git-diff
         - minimap-highlight-selected
+        - minimap-pigments
         - minimap-selection
-        - nbsp-detect
         - pane-layout-plus
         - pdf-view
-        - project-palette-finder
+        - pigments
         - pulsing-cursor
         - rails-transporter
         - rspec-snippets
-        - ruby-string-interpolation
         - ruby-test
-        - scroll-sync
         - show-in-system
         - skim-displayline
         - sourcegraph-atom
         - stacktrace
-        - subword-navigation
-        - synced-sidebar
         - term2
         - tidy-markdown
         - todo-show
@@ -79,7 +69,6 @@
         - trailing-spaces
         - transform
         - vim-mode
-        - wrap-lines
 
 
         - autocomplete-emojis
@@ -87,13 +76,11 @@
         - autocomplete-ruby
         - autocomplete-python
         - autocomplete-sass
-        - autocomplete-bibtex
 
 
         - language-apache
         - language-api-blueprint
         - language-asciidoc
-        - language-coffee-script-angular
         - language-d
         - language-dart
         - language-docker
@@ -107,7 +94,6 @@
         - language-ini
         - language-latex
         - language-lisp
-        - language-mustache
         - language-nginx
         - language-proguard
         - language-puppet
@@ -129,7 +115,9 @@
         - linter-erb
         - linter-eslint
         - linter-flow
-        - linter-golint
+        - linter-golinter
+        - linter-gotype
+        - linter-govet
         - linter-htmlhint
         - linter-javac
         - linter-js-yaml
@@ -137,8 +125,6 @@
         - linter-jshint
         - linter-perl
         - linter-php
-        - linter-puppet
-        - linter-puppet-lint
         - linter-rubocop
         - linter-ruby
         - linter-scalac
