--- a/cli/javascript/install.yml
+++ b/cli/javascript/install.yml
@@ -16,6 +16,7 @@
       with_items:
         - yo
         - generator-angular
+        - generator-polymer
         - generator-karma
 
     - name: Install JavaScript test tools (brew)
