--- a/osx/config/var_fragments/com.apple.appleseed.FeedbackAssistant.yml
+++ b/osx/config/var_fragments/com.apple.appleseed.FeedbackAssistant.yml
@@ -1,4 +1,5 @@
   com.apple.appleseed.FeedbackAssistant:
-    Autolaunched: no
     WelcomeWindowShown: yes
+    Autolaunched: no
     autoDockAdded: no
+    FBASuppressPrivacyNotice: no
