Install python module psutil as dependency for powerline

--- a/cli/shells/install.yml
+++ b/cli/shells/install.yml
@@ -53,6 +53,7 @@
       pip: name={{item}} state=latest
       with_items:
         - powerline-status
+        - psutil
 
     - name: Install powerline dotfiles
       vcsh:
