--- a/post.yml
+++ b/post.yml
@@ -17,12 +17,22 @@
     - name: Create empty Homebrew (Cask) cache folders
       sudo: yes
       file:
-        path: "{{item}}"
+        path: "{{ item }}"
         state: directory
-        owner: "{{ansible_ssh_user}}"
+        owner: "{{ ansible_ssh_user }}"
         group: admin
         mode: 0775
       with_items:
         - /Library/Caches/Homebrew/
         - /Library/Caches/Homebrew/Casks
         - /Library/Caches/Homebrew/Formula
+
+    - name: Set correct permissions for Homebrew Cask
+      sudo: yes
+      file:
+        path: /opt/homebrew-cask/Caskroom
+        state: directory
+        owner: "{{ ansible_ssh_user }}"
+        group: admin
+        mode: 0775
+        recurse: yes
