--- a/apps/all.yml
+++ b/apps/all.yml
@@ -28,6 +28,7 @@
 
 # Media
 - include: adobe-creative-cloud/install.yml
+- include: spotify/install.yml
 
 # Virtual Machines
 - include: virtualbox/install.yml
