--- a/apps/all.yml
+++ b/apps/all.yml
@@ -23,6 +23,7 @@
 - include: google-drive/install.yml
 
 # Productivity
+- include: evernote/install.yml
 
 # Documents
 - include: xmind/install.yml
