--- a/apps/all.yml
+++ b/apps/all.yml
@@ -10,6 +10,7 @@
 
 # Security
 - include: 1password/install.yml
+- include: gpgtools/install.yml
 
 # Browser
 - include: google-chrome/install.yml
@@ -19,9 +20,6 @@
 # Communication
 - include: skype/install.yml
 - include: teamviewer/install.yml
-
-# Security
-- include: gpgtools/install.yml
 
 # SaaS
 - include: google-drive/install.yml
@@ -47,4 +45,5 @@
 - include: android-file-transfer/install.yml
 - include: burn/install.yml
 - include: espionage/install.yml
+- include: keepingyouawake/install.yml
 - include: music-manager/install.yml
