--- a/cli/platforms/web/install.yml
+++ b/cli/platforms/web/install.yml
@@ -13,3 +13,9 @@
         - sass
         - compass
         - scss-lint
+
+    - name: Install CLI browser
+      homebrew: name={{item.name}} install_options={{item.install_options}}
+      with_items:
+        - name: phantomjs
+          install_options:
