--- a/site.yml
+++ b/site.yml
@@ -6,6 +6,7 @@
 - hosts: development
   roles:
     - dev/lang/go
+    - dev/lang/java
     - dev/lang/js
     - dev/lang/python
     - dev/lang/ruby
