Add task to insert fish into /etc/shells

--- a/roles/sys/cli/fish/tasks/main.yml
+++ b/roles/sys/cli/fish/tasks/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: install
   homebrew: name=fish
+
+- name: add to shell list
+  become: true
+  lineinfile:
+    dest: /etc/shells
+    line: "{{sys_cli_fish_bin}}"
