--- a/site.yml
+++ b/site.yml
@@ -6,6 +6,7 @@
     - sys/cli/bash
     - sys/cli/fish
     - sys/cli/main-utils
+    - sys/cli/the_silver_searcher
     - sys/cli/tmux
     - sys/cli/tmuxinator
     - sys/cli/vcsh
