--- a/site.yml
+++ b/site.yml
@@ -7,10 +7,10 @@
     - sys/cli/bash
     - sys/cli/fish
     - sys/cli/hunspell
-    - sys/cli/main-utils
     - sys/cli/the_silver_searcher
     - sys/cli/tmux
     - sys/cli/tmuxinator
+    - sys/cli/utils
     - sys/cli/vcsh
 
     - sys/conf/shell
