--- a/site.yml
+++ b/site.yml
@@ -55,6 +55,7 @@
     - media/cli/imagemagick
     - media/cli/mediainfo
     - media/cli/rtmpdump
+    - media/cli/sox
     - media/cli/youtube-dl
 
     - media/gui/adobe-creative-cloud
