--- a/site.yml
+++ b/site.yml
@@ -56,6 +56,7 @@
     - media/cli/mediainfo
     - media/cli/rtmpdump
     - media/cli/sox
+    - media/cli/tesseract
     - media/cli/youtube-dl
 
     - media/gui/adobe-creative-cloud
