--- a/site.yml
+++ b/site.yml
@@ -52,6 +52,7 @@
 - hosts: media-production
   roles:
     - media/cli/diff-pdf
+    - media/cli/ffmpeg
     - media/cli/imagemagick
     - media/cli/mediainfo
     - media/cli/rtmpdump
