Move VLC to pvt

--- a/site.yml
+++ b/site.yml
@@ -26,6 +26,7 @@
     - pvt/gui/firefox
     - pvt/gui/google-chrome
     - pvt/gui/spotify
+    - pvt/gui/vlc
 
 - hosts: development
   roles:
@@ -66,6 +67,5 @@
     - media/cli/youtube-dl
 
     - media/gui/adobe-creative-cloud
-    - media/gui/vlc
 
     - media/misc/fonts
