--- a/site.yml
+++ b/site.yml
@@ -32,6 +32,7 @@
     - pvt/gui/keepingyouawake
     - pvt/gui/google-drive
     - pvt/gui/spotify
+    - pvt/gui/teamviewer
     - pvt/gui/toggldesktop
     - pvt/gui/vlc
 
