--- a/site.yml
+++ b/site.yml
@@ -31,6 +31,7 @@
     - pvt/gui/google-chrome
     - pvt/gui/keepingyouawake
     - pvt/gui/google-drive
+    - pvt/gui/slack
     - pvt/gui/spotifree
     - pvt/gui/spotify
     - pvt/gui/teamviewer
