--- a/site.yml
+++ b/site.yml
@@ -4,10 +4,14 @@
     - lib/ansible-modules-libs
     - sys/conf/homebrew
 
+    # - sys/dev/cuda
+    - sys/dev/paragon-extfs
+
     - sys/cli/aria2
     - sys/cli/aspell
     - sys/cli/bash
     - sys/cli/curl
+    - sys/cli/exa
     - sys/cli/fish
     - sys/cli/hunspell
     - sys/cli/neovim
@@ -26,16 +30,30 @@
 
     - sys/conf/shell
 
+    - pvt/gui/1password
+    - pvt/gui/alfred
+    - pvt/gui/android-file-transfer
+    - pvt/gui/au-lab
+    - pvt/gui/bartender
     - pvt/gui/burn
+    - pvt/gui/evernote
     - pvt/gui/firefox
+    - pvt/gui/flux
     - pvt/gui/google-chrome
     - pvt/gui/keepingyouawake
+    - pvt/gui/keeweb
+    - pvt/gui/skim
+    - pvt/gui/skype
     - pvt/gui/google-drive
+    - pvt/gui/gpgtools-beta
+    - pvt/gui/iterm2-beta
     - pvt/gui/slack
     - pvt/gui/spotifree
     - pvt/gui/spotify
     - pvt/gui/teamviewer
     - pvt/gui/toggldesktop
+    - pvt/gui/torbrowser
+    - pvt/gui/ubersicht
     - pvt/gui/vlc
 
 - hosts: development
@@ -47,10 +65,12 @@
     - dev/lang/js
     - dev/lang/js-tools
     - dev/lang/python
+    - dev/lang/r
     - dev/lang/ruby
     - dev/lang/ruby-tools
 
     - dev/cli/ansible
+    - dev/cli/bats
     - dev/cli/cmake
     - dev/cli/docker
     - dev/cli/git
@@ -63,8 +83,16 @@
     - dev/cli/tig
 
     - dev/gui/atom
+    - dev/gui/dash
+    - dev/gui/datagrip
+    - dev/gui/intellij-idea
+    - dev/gui/kaleidoscope
+    - dev/gui/paw
+    - dev/gui/rstudio
+    - dev/gui/sourcetree
     - dev/gui/virtualbox
     - dev/gui/visualvm
+    - dev/gui/wireshark
 
 - hosts: media-production
   roles:
@@ -78,4 +106,5 @@
     - media/cli/youtube-dl
 
     - media/gui/adobe-creative-cloud
+    - media/gui/google-nik-collection
     - media/gui/obs
