--- a/site.yml
+++ b/site.yml
@@ -11,6 +11,7 @@
     - sys/cli/aspell
     - sys/cli/bash
     - sys/cli/curl
+    - sys/cli/docker
     - sys/cli/exa
     - sys/cli/fish
     - sys/cli/hunspell
@@ -72,7 +73,6 @@
     - dev/cli/ansible
     - dev/cli/bats
     - dev/cli/cmake
-    - dev/cli/docker
     - dev/cli/git
     - dev/cli/gradle
     - dev/cli/mercurial
