--- a/roles/pvt/gui/vlc/tasks/main.yml
+++ b/roles/pvt/gui/vlc/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
 - name: install
   homebrew_cask: name=vlc
+
+- name: configure
+  notify: restart vlc
+  vcsh: name=dotfiles-vlc remote=git@github.com:mtneug/dotfiles-vlc.git
