Add Skala Color

--- a/site.yml
+++ b/site.yml
@@ -117,5 +117,6 @@
 
     - media/gui/adobe-creative-cloud
     - media/gui/google-nik-collection
+    - media/gui/colorpicker-skalacolor
     - media/gui/obs
     - media/gui/omnigraffle6
