Add configuration for tig

--- a/roles/dev/cli/tig/tasks/main.yml
+++ b/roles/dev/cli/tig/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: install
   homebrew: name=tig
+
+- name: configure
+  vcsh: name=dotfiles-tig remote=git@github.com:mtneug/dotfiles-tig.git
