--- a/site.yml
+++ b/site.yml
@@ -123,5 +123,6 @@
     - media/gui/blackmagic-smartview
     - media/gui/google-nik-collection
     - media/gui/colorpicker-skalacolor
+    - media/gui/couleurs
     - media/gui/obs
     - media/gui/omnigraffle6
